gwt-cordova/src/main/webapp/scss/experiment.scss
/* ... */
.svgPopupPanel .gwt-Button,
.stimulusHelpPanel .gwt-Button {
    background: darkgrey;
    /*color: $primaryColour3;*/
    color: white; // white is required by the colour picker help box, but the svg html popup panel might have other needs and this should be checked
    padding: 10px 10px 10px 10px;
    margin-left: auto;
}

.stimulusPanel {    
    margin-left: auto;
    margin-right: auto;
    padding: 10px 10px 40px 10px;
}

.stimulusScreen {
    background: black;
}

.menuTable {
    width: 100%;
}
.gridCellLabel {
    font-size: 15pt;
    padding: 0px;
}
.menuTable, .gridTable, .gridCell {
    padding: 10px 10px;
    border-color: $primaryColour2;
    border-radius: 15px;
    outline: none;
    border-width: 1px;
    border-style: solid;
    margin-bottom: 10px;
}
table.gridCell:hover, td.gridCell:hover {
    background: lightgray;
}
.gridCell {
    vertical-align: middle;
    display: table-cell;
    margin: auto;   
    width: 300px;
    height: 300px;
    min-width: 300px;
    min-height: 300px;
    zoom: $gridCellZoom;
}
.gwt-HTML, .resultsTablePanel, .metadataTable, .menuTable, .gwt-CheckBox, .pageLink {
}
.resultsTableTitle {
    font-size: 24pt;
}
.gwt-Label.stimulusProgressLabel {
    text-align: center;
    width: 100%;
}

.gwt-Button.metadataError,
.metadataError {
    background: rgb(246,170,139);
}

.metadataOK {
    background: $backgroundColour;
}

.applicationErrorMessage {
    font-size: 24pt;
    color: black;
    padding: 50px;
}

.narrowWidth {
    /*background: green;*/
}

.choosePlayerList,
.svgPopupPanel .gwt-Button,
table#screenExample td, .stimulusHelpPanel .gwt-Button, .stimulusHelpText, .popupTextBox,
.gwt-Label, .gwt-HTML, .gwt-CheckBox, .pageLink, .contentBody, .metadataError, .metadataOK, .metadataErrorMessage,
.gwt-Button.nextButton, .gwt-Button.menuButton,.gwt-PushButton.stimulusButton, .gwt-Button.stimulusButton,.gwt-Button.stimulusHelpButton, .gwt-Button.stimulusQuitButton, .gwt-Button.stimulusButton, .gwt-Button.optionButton, .gwt-Label.headerButton {  
    font-size: $textFontSize;
    /*    
    font-family: Georgia, Times, "Times New Roman", serif;
    font-size: 16pt;
    line-height: 20pt;
    */
}

/*#widgetTag {
        transform: -ms-scale($widgetTagScale,$widgetTagScale);
        transform: -webkit-scale($widgetTagScale,$widgetTagScale);
        transform: scale($widgetTagScale,$widgetTagScale);
    zoom: $widgetTagScale;
}*/
.minimalWidth {
    max-width: 500px;
}
.gwt-HTML.countDownLabel {
    color: red; 
    padding: 10px;
}

.gwt-HTML.groupMessageLabel {
    font-size: 60px;
    padding: 10px;
}

/*.menuTable .gwt-HTML,*/
.menuTable.gwt-HTML.highlightedText,
.gwt-HTML.groupMessageLabel,
.gwt-HTML.countDownLabel {
    text-align: center;
}

.gwt-HTML.highlightedText,
.gwt-HTML.groupMessageLabel,
.gwt-HTML.countDownLabel {
    font-weight: bold; 
    text-align: center;
    /*text-transform: uppercase;*/
}

.gwt-HTML a, .gwt-HTML a:visited, .gwt-HTML a:hover,
.gwt-Label, .gwt-HTML, .headerLabel, .headerLabelCentered, .resultsTableTitle, .gwt-CheckBox, .pageLink, .contentBody {
    color:$primaryColour1; 
    /*line-height: 20pt;*/
} 

.metadataErrorMessage {
    color:rgb(246,170,139);
    /*line-height: 20pt;*/
    padding: 10px;
} 

.gwt-PushButton.stimulusButton, .gwt-Button.stimulusButton{
    /*width: 60%;*/    
    /*height: 100%;*/    
    /*vertical-align: middle;*/
    margin-top: auto;
    margin-bottom: auto;
}

/*.gwt-Button.nextButton:disabled,*/ 
/*, .gwt-Button.optionButton:disabled, .gwt-Label.headerButton:disabled {*/
.gwt-Button.stimulusButton:hover:disabled,
.gwt-Button.stimulusButton:disabled,
.gwt-Button.stimulusButton:hover:active,
.gwt-Button.stimulusButton:active,
.gwt-Button.stimulusButton
/*.gwt-Button.menuButton:hover:disabled*/ 
{
    /*border-style: solid;*/
    background: lightgrey;
    /*border: 7px solid white;*/
    padding: 7px 7px;
    /*border-bottom-color: white;*/
    border: none;
    /*opacity: 0.4;*/
    /*filter: alpha(opacity=40);  For IE8 and earlier */
}

.gwt-Button.stimulusImageButton:hover:disabled,
.gwt-Button.stimulusImageButton:disabled,
.gwt-Button.stimulusImageButton:hover:active,
.gwt-Button.stimulusImageButton:active,
.gwt-Button.stimulusImageButton
{
    background: none;
}

.gwt-PushButton.stimulusButtonHighlight,
.gwt-Button.stimulusButtonHighlight:hover,
.gwt-Button.stimulusButtonHighlight:hover:disabled,
.gwt-Button.stimulusButtonHighlight:disabled,
.gwt-Button.stimulusButtonHighlight:hover:active,
.gwt-Button.stimulusButtonHighlight:active,
.gwt-Button.stimulusButtonHighlight{
    border: 7px #994646;
    border-style: solid;
    /*background: white;*/
    padding: 0px 0px;
} 

.choosePlayerList,
.svgPopupPanel .gwt-Button,
.stimulusHelpText, .popupTextBox,
table#screenExample td, .stimulusHelpPanel .gwt-Button,
.gwt-Label, .gwt-HTML, .headerLabel, .headerLabelCentered, .resultsTableTitle, .gwt-CheckBox, .pageLink, .contentBody, .metadataErrorMessage,
.gwt-Button.nextButton, .gwt-Button.menuButton,.gwt-PushButton.stimulusButton,.gwt-Button.stimulusButton,.gwt-Button.stimulusHelpButton, .gwt-Button.stimulusQuitButton, .gwt-Button.stimulusButton, .gwt-Button.optionButton, .gwt-Label.headerButton 
{
    font-family: Calibri, "Open Sans", "Droid Sans", Arial, Candara, Segoe, "Segoe UI", Optima, sans-serif;
}

#widgetTag {
    height: 100%;
    background-color: $backgroundColour;
}

/* example stimulus screen table */
table#screenExample td {
    font-weight: bold; 
    text-align: center;
}
#screenExample {
    margin-left: auto;
    margin-right: auto; 
}
#screenExamplePicker {
    height: 90px;
    width: 90px;
    background: -webkit-linear-gradient(red, black);
    background: -o-linear-gradient(red, black);
    background: -moz-linear-gradient(red, black);
    background: linear-gradient(red, black);
}
/* ... */

